@@ -1,5 +1,7 @@
 1/7/13 started 7.35.0
 - added vips_matrixload() and vips_matrixsave(), load and save vips mat format
+- rename image arrays as image matrices ... INTERPRETATION_ARRAY ->
+  INTERPRETAtioN_MATRIX etc. 
 
 28/6/13 started 7.34.1
 - fix morphological operators on non-uchar images
